# council-of-elders

./: pyproject.toml  readme.md
councilofelders/: agent.py  anthropic.py  cohort.py  deepinfra.py  deepseek.py  llamaindex.py  openai.py  pinecone.py  replicate.py  utils.py  vertex.py
examples/: Council_of_Elders_Example.ipynb
