[tool.poetry]
name = "councilofelders"
version = "0.1.0"
description = "A Python package for managing multiple LLMs allowing them to chat with each other"
authors = ["Trevor Grant <trevor.d.grant@gmail.com>"]
license = "GNU AGPLv3"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
openai = "1.55.3"
httpx = "0.27.2"
anthropic = "0.25.6"
pinecone-client = "3.2.2"
llama-index-vector-stores-pinecone = "0.1.6"
llama-index-embeddings-openai = "0.1.8"
llama-index-llms-openai = "0.1.22"
replicate = "0.25.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
